Added InteractionService with endpoint #uploadInteraction for POST "/api/interaction/upload". Added import of sample interaction to script "clobber-build-run-and-import.sh". Added properties ModelNode#mostRecent and ModelNode#incoming. Moved registration of transitions from ModelNodeEventHandler to ModelNode and added supporting classes: ModelStepCommand, ModelStepEvent. Changed ModelNodeQueryHandler#query(NextModelNodeQuery) to return the ID rather than the ModelNodeDocument. Fixed method StateTrackerService#advance. Added a few extra properties to "test/resources/application.properties" to reduce the amount of logging while running tests.
